--- a/style.css
+++ b/style.css
@@ -1,74 +1,73 @@
-* {
-	padding:0;
-	margin:0;
-	font-family:sans-serif;
+*{
+    padding: 0;
+    margin:0;
+    font-family:sans-serif;
 }
-a {
-	color: inherit;
-	text-decoration: none;
+a{
+    color: inherit;
+    text-decoration: bisque;
 }
 .medsos {
-	padding:5px 0;
-	background-color:peru;
+    padding:5px 0;
+    background-color: rgb(182, 122, 84)
 }
-.medsos ul li {
-	display: inline-block;
-	color: #fff;
-	margin-right:10px;
+.medsos ul li{
+    display: inline-block;
+    color: #fff;
+    margin-right;10px;
 }
-.container {
-	width:70%;
-	margin:0 auto;
+.container{
+    width:70%;
+    margin:0 auto;
 }
 .container:after {
-	content:"";
-	display:block;
-	clear:both;
+    content:"";
+    display:block;
+    clear:both;
 }
-header h1 {
-	float:left;
-	padding:15px 0;
-	color:peru;
+header h1{
+    float:left;
+    padding:15px 0;
+    color:rgb(239, 146, 53);
 }
-header ul {
-	float:right;
+header ul{
+    float:right;
 }
 header ul li {
-	display: inline-block;
+    display: inline-block;
 }
 header ul li a {
-	padding:25px 20px;
-	display:inline-block;
+    padding:25px 20px;
+    display:inline-block;
 }
-header ul li a:hover {
-	background-color :peru;
-	color:#fff;
+header ul li a:hover{
+    background-color: rgb(194, 111, 16)
 }
-.active {
-	background-color:peru;
-	color:#fff;
+.active{
+    background-color: rgb(194, 111, 16)
+    color: rgb(194, 111, 16)
 }
-.banner {
-	height: 60vh;
-	background-image:url(hotel.jpg) ;
-	background-size:cover;
-	position:relative;
-	display:flex;
-	justify-content:center;
-	align-items:center;
+.banner{
+    height: 6vh;
+    background-image:url(hotel.jpg);
+    background-size:cover;
+    position:relative;
+    display:flex;
+    justify-content:center;
+    align-items:center;
 }
-.banner:after {
-	content:'';
-	display:block;
-	position:absolute;
-	top:0;
-	left:0;
-	right:0;
-	bottom:0;
-	background-color:#292929be;
+.banner:after{
+    content:'';
+    display:block;
+    position: absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    background-color: #292929be;
 }
-.banner h2 {
-	color:#fff;
+.banner h2{
+    color:#fff;
 	z-index:1;
 	padding:20px 25px;
 	border:3px solid #fff;
@@ -80,9 +79,14 @@ section h3 {
 	text-align:center;
 	padding:20px 0;
 	color:rgb(194, 111, 16)
-	margin-bottom 20px;
+
 }
-.about,
+.about
+
+.container img{
+	display: block;
+	margin: auto;
+}
 .service {
 	padding-bottom:100px
 }
@@ -178,4 +182,46 @@ footer {
 		float:none;
 		margin-bottom:20px;
 	}
+	body{
+		background: aquamarine;
+		font-family: sans-serif;
+		text-align: center;
+		color: white;
+		font-size: 24px;
+		display: flex;
+		flex-direction: column;
+	}
+	
+	.main{
+		display: flex;
+		flex: 1;
+	}
+	
+	.left{
+		background: orange;
+		padding: 5em 0 5em 0;
+		flex: 5 5 150px;
+	}
+	
+	main{
+		background: orange;
+		padding: 5em 0 5em 0;
+		flex: 5 5 150px;
+	}
+	
+	.right{
+		background: orange;
+		padding: 5em 0 5em 0;
+		flex: 5 5 150px;
+	}
+	
+	@media all and (max-widht: 550px){
+		.main{
+			flex-direction: column;
+		}
+		main{
+			padding: 5em 0 5em 0;
+		}
+	}
 }
+
